# vi-engine

./: .clippy.toml  ASSEMBLY_LINTING.md  CHANGELOG.md  Cargo.toml  README.md  TECHNICAL_STATUS.md  build.rs  deny.toml  justfile
.cargo/: config.toml
.github/workflows/: ci.yml  main.yml
benches/: assembly_vs_rust_benchmark.rs  clean_char_benchmark.rs  incremental_benchmark.rs  optimization_benchmark.rs  safety_benchmark.rs  syllable_benchmark.rs  transform_benchmark.rs
docs/: FORCE_RUST_EXAMPLES.md  RUNTIME_OPTIMIZATION_ENHANCEMENT.md  STRATEGY_SELECTION_ENHANCEMENT.md
docs/assembly-integration/: README.md  calling-conventions.md  index.md  platform-guide.md  safety-model.md
docs/cross-compilation-safety/: CROSS_COMPILATION.md  IMPLEMENTATION_SUMMARY.md  README.md  architecture-support.md  assembly-safety-api.md  assembly-safety-troubleshooting.md  performance-analysis.md  troubleshooting.md
docs/cross-compilation-safety/examples/: basic-usage.md
docs/production-api/: README.md
docs/research/: assembly-safety-patterns.md  performance-impact-analysis.md  platform-specific-considerations.md
examples/: api_comparison.rs  async_example.rs  check_assembly.rs  custom_definition.rs  debug_assembly.rs  debug_chars.rs  force_rust_example.rs  force_rust_simple.rs  incremental.rs  limitation_fixes_demo.rs  long.rs  old_style.rs  production_usage.rs  repl.rs  rust_only_processing.rs  rust_standards_demo.rs  safe_processing.rs  simple.rs  simple_auto_optimization.rs  strategy_selection.rs  telex.rs  test_bulk_debug.rs  test_direct_assembly.rs  test_fallback.rs  test_single_char_loop.rs  vni.rs
scripts/: cross-compile.sh  lint_assembly.sh
src/: async_safety.rs  editing.rs  lib.rs  memory_profiling.rs  methods.rs  optimization_selector.rs  parsing.rs  processor.rs  runtime_detection.rs  safety.rs  syllable.rs  util.rs  validation.rs  vietnamese_processor.rs
src/asm/: aarch64_apple_silicon.s  aarch64_generic.s  aarch64_kernels.s  direct_asm.rs  mod.rs  optimized_aarch64.s  x86_64_kernels.s
tests/: async_safety_tests.rs  incremental.rs  integration_tests.rs  performance_tests.rs  runtime_optimization_tests.rs  safety_tests.rs  shared.rs  telex.rs  vni.rs
